--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ DEVELOPMENT PAGE*/
 
 /*WEEK 8*/
 
-.week9, .week8, .week7, .week6, .week5, .week4, .week3, .week2, .week1 {
+.week10, .week9, .week8, .week7, .week6, .week5, .week4, .week3, .week2, .week1 {
 	text-align: center;
 	padding-left: 350px;
 	padding-right: 350px;
@@ -223,6 +223,21 @@ DEVELOPMENT PAGE*/
 .week2_images3 {
 	width: 750px;	
 }
+
+.week10_images {
+	margin-top: 25px;
+	margin-bottom: 25px;
+	width: 1137px;		
+}
+
+.week10_images2 {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	width: 1137px;
+}
+
+
+
 
 
 
