--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,30 @@ min-width: 200px;
 /*
 DEVELOPMENT PAGE*/
 
+
+#myBtn {
+
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 15px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: rgba(246, 195, 206, 0.8); /* Set a background color */
+  color: rgb(88, 88, 90); /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 10px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: rgba(246, 195, 206, 0.4); /* Add a dark-grey background on hover */
+}
+
+
+
 .logo_development {
 	width: 8%;
 	margin-top: -40px;
@@ -101,7 +125,7 @@ DEVELOPMENT PAGE*/
 
 /*WEEK 8*/
 
-.week12, .week11, .week10, .week9, .week8, .week7, .week6, .week5, .week4, .week3, .week2, .week1 {
+.week12, .week11, .week10, .week9, .week8, .week7, .usertesting, .week6, .week5, .week4, .week3, .week2, .week1 {
 	text-align: center;
 	padding-left: 350px;
 	padding-right: 350px;
@@ -175,6 +199,25 @@ DEVELOPMENT PAGE*/
 	width: 1137px;
 }
 
+.usertesting_images {
+	margin-top: 95px;
+	width: 550px;
+	transform: rotate(90deg);
+	margin-right: -50px;
+	margin-left: -50px;
+	margin-bottom: 95px;
+}
+
+
+.usertesting_images2 {
+	margin-top: 95px;
+	width: 550px;
+	transform: rotate(90deg);
+	margin-right: -50px;
+	margin-left: -50px;
+	margin-bottom: 55px;
+}
+
 
 
 .week6_video2{
@@ -240,6 +283,69 @@ DEVELOPMENT PAGE*/
 	margin-top: -5px;
 	width: 1137px;
 }
+
+
+/*DOCUMENTATION*/
+
+.description_documentation {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1.01em;
+	color: rgb(88, 88, 90);
+	padding-left: 350px;
+	padding-right: 350px;
+	padding-top: 50px;
+}
+
+.description_tab {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 1.01em;
+	color: rgb(88, 88, 90);
+	padding-left: 420px;
+	padding-right: 350px;
+
+}
+
+.insta_wall_image{
+	margin-right: 400px;
+	margin-top: 25px;
+	width: 400px
+}
+
+.documentation_logo {
+	margin-left: -280px;
+	width: 320px;
+
+}
+
+.brochure_image_documentation {
+	margin-bottom: 25px;
+	margin-left: 10px;
+	margin-right: 10px;
+	margin-top: 25px;
+}
+
+.stickers_documentation {
+	margin-top: 25px;
+	margin-bottom: 25px;
+}
+
+.link {
+	color: rgba(246, 195, 206, 0.8);
+}
+
+.link:hover {
+	color: grey;
+}
+
+
+/*DEMO*/
+
+
+.demo {
+	text-align: center;
+	margin-top: 50px;
+}
+
 
 
 
